adding local secrets store https://docs.microsoft.com/en-us/aspnet/core/security/app-secrets#accessing-user-secrets-via-configuration
adding inventory service

chaning api to purchase api to improve containerised design

--- a/WinStoreInventory/WinStoreInventory.csproj
+++ b/WinStoreInventory/WinStoreInventory.csproj
@@ -2,9 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
-    <UserSecretsId>e3cd2f49-e318-46df-9116-a87a766860d0</UserSecretsId>
+    <DockerComposeProjectPath>..\WineStore\docker-compose.dcproj</DockerComposeProjectPath>
+    <UserSecretsId>094f376a-fc60-4c49-be15-6daf7e213be3</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
@@ -12,7 +16,6 @@
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
-    <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
