--- a/WineStore/docker-compose.override.yml
+++ b/WineStore/docker-compose.override.yml
@@ -5,10 +5,16 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
-      - "80"
+      - "17400:80"
 
   winestoreapi:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
-      - "80"
+      - "17500:80"
+
+  winstoreinventory:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    ports:
+      - "17600:80"
