--- a/WineStore/WineStoreWeb/appsettings.json
+++ b/WineStore/WineStoreWeb/appsettings.json
@@ -6,8 +6,13 @@
     }
   },
   "Endpoints": {
-    "purchaseAPI": "http://localhost:17500/",
-    "inventoryAPI": "http://localhost:17600/",
-    "trolleyAPI": "http://localhost:17700/"
+    "PurchaseAPI": "http://localhost:17500/",
+    "InventoryAPI": "http://localhost:17600/",
+    "TrolleyAPI": "http://localhost:17700/"
+  },
+  "Keys": {
+    "PurchaseAPIKey": "TOBEREPLACED",
+    "InventoryAPIKey": "ALSOTOBEREPLACED",
+    "TrolleyAPIKey": "ANOTHERONETOBEREPLACED"
   }
 }
