--- a/WineStore/WineStoreApi/WineStoreApi.csproj
+++ b/WineStore/WineStoreApi/WineStoreApi.csproj
@@ -19,4 +19,10 @@
     <DotNetCliToolReference Include="Microsoft.Extensions.SecretManager.Tools" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
