--- a/WineStore/WineStoreTrolley/WineStoreTrolley.csproj
+++ b/WineStore/WineStoreTrolley/WineStoreTrolley.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\" />
     <Folder Include="Model\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
   <ItemGroup>
