finish local solution

--- a/WineStore/WineStoreApi/appsettings.json
+++ b/WineStore/WineStoreApi/appsettings.json
@@ -12,5 +12,10 @@
       }
     }
   },
-  "MyAPIKey": "TOBEREPLACED"
+  "MyAPIKey": "TOBEREPLACED",
+  "TrolleyAPIKey": "ANOTHERONETOBEREPLACED",
+  "InventoryAPIKey": "ALSOTOBEREPLACED",
+  "TrolleyAPI": "http://winestoretrolley/",
+  "InventoryAPI": "http://winestoreinventory/",
+  "SendGridAPIKey": "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",
 }
