--- a/WineStore/WineStoreWeb/appsettings.json
+++ b/WineStore/WineStoreWeb/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Endpoints": {
-    "PurchaseAPI": "http://winestorepurchase/",
+    "PurchaseAPI": "http://winestoreapi/",
     "InventoryAPI": "http://winestoreinventory/",
     "TrolleyAPI": "http://winestoretrolley/"
   },
