--- a/WineStore/WineStoreApi/WineStoreApi.csproj
+++ b/WineStore/WineStoreApi/WineStoreApi.csproj
@@ -8,10 +8,12 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Sendgrid" Version="9.9.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,4 +27,7 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\WineStoreShared\WineStoreShared.csproj" />
+  </ItemGroup>
 </Project>
