changed env variables to work with app service

--- a/WineStore/WineStoreWeb/appsettings.json
+++ b/WineStore/WineStoreWeb/appsettings.json
@@ -5,14 +5,10 @@
       "Default": "Warning"
     }
   },
-  "Endpoints": {
-    "PurchaseAPI": "http://winestoreapi/",
-    "InventoryAPI": "http://winestoreinventory/",
-    "TrolleyAPI": "http://winestoretrolley/"
-  },
-  "Keys": {
-    "PurchaseAPIKey": "TOBEREPLACED",
-    "InventoryAPIKey": "ALSOTOBEREPLACED",
-    "TrolleyAPIKey": "ANOTHERONETOBEREPLACED"
-  }
+  "PurchaseAPI": "http://winestoreapi/",
+  "InventoryAPI": "http://winestoreinventory/",
+  "TrolleyAPI": "http://winestoretrolley/",
+  "PurchaseAPIKey": "TOBEREPLACED",
+  "InventoryAPIKey": "ALSOTOBEREPLACED",
+  "TrolleyAPIKey": "ANOTHERONETOBEREPLACED"
 }
