--- a/WineStoreApi/WineStoreApi.csproj
+++ b/WineStoreApi/WineStoreApi.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
     <UserSecretsId>65c396d1-1a13-43cf-837b-8b722fc0d30a</UserSecretsId>
+    <ApplicationInsightsResourceId>/subscriptions/795e35a4-61a5-41ee-bfe5-0ece60bb7cdc/resourcegroups/WineShop/providers/microsoft.insights/components/winepurservdevai</ApplicationInsightsResourceId>
+    <ApplicationInsightsAnnotationResourceId>/subscriptions/795e35a4-61a5-41ee-bfe5-0ece60bb7cdc/resourcegroups/WineShop/providers/microsoft.insights/components/winepurservdevai</ApplicationInsightsAnnotationResourceId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Sendgrid" Version="9.9.0" />
   </ItemGroup>
@@ -29,5 +32,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WineStoreShared\WineStoreShared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 </Project>
