--- a/WineStoreApi/appsettings.json
+++ b/WineStoreApi/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
@@ -18,4 +18,7 @@
   "TrolleyAPI": "http://winestoretrolley/",
   "InventoryAPI": "http://winestoreinventory/",
   "SendGridAPIKey": "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",
+  "ApplicationInsights": {
+    "AIInstrumentationKey": "441747a3-973d-4f8f-9f2f-49b5e79089d3"
+  }
 }
