--- a/WineStoreWeb/appsettings.json
+++ b/WineStoreWeb/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
@@ -10,8 +10,5 @@
   "TrolleyAPI": "http://winestoretrolley/",
   "PurchaseAPIKey": "TOBEREPLACED",
   "InventoryAPIKey": "ALSOTOBEREPLACED",
-  "TrolleyAPIKey": "ANOTHERONETOBEREPLACED",
-  "ApplicationInsights": {
-    "InstrumentationKey": "a054c962-891d-44b9-a5e7-6dbfc7348f70"
-  }
+  "TrolleyAPIKey": "ANOTHERONETOBEREPLACED"
 }
