app settings change

--- a/WineStoreApi/appsettings.json
+++ b/WineStoreApi/appsettings.json
@@ -17,5 +17,5 @@
   "InventoryAPIKey": "ALSOTOBEREPLACED",
   "TrolleyAPI": "http://winestoretrolley/",
   "InventoryAPI": "http://winestoreinventory/",
-  "SendGridAPIKey": "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",
+  "SendGridAPIKey": "{SendGridAPIKey}"
 }
