--- a/WineStoreApi/appsettings.json
+++ b/WineStoreApi/appsettings.json
@@ -17,5 +17,5 @@
   "InventoryAPIKey": "ALSOTOBEREPLACED",
   "TrolleyAPI": "http://winestoretrolley/",
   "InventoryAPI": "http://winestoreinventory/",
-  "SendGridAPIKey": "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"
+  "SendGridAPIKey": "{SendGridAPIKey}"
 }
