--- a/WineStoreApi/appsettings.json
+++ b/WineStoreApi/appsettings.json
@@ -17,5 +17,5 @@
   "InventoryAPIKey": "ALSOTOBEREPLACED",
   "TrolleyAPI": "http://winestoretrolley/",
   "InventoryAPI": "http://winestoreinventory/",
-  "SendGridAPIKey": "{SendGridAPIKey}"
+  "SendGridAPIKey": "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"
 }
