--- a/WineStoreApi/appsettings.json
+++ b/WineStoreApi/appsettings.json
@@ -15,7 +15,7 @@
   "MyAPIKey": "TOBEREPLACED",
   "TrolleyAPIKey": "ANOTHERONETOBEREPLACED",
   "InventoryAPIKey": "ALSOTOBEREPLACED",
-  "TrolleyAPI": "http://winestoretrolley/",
-  "InventoryAPI": "http://winestoreinventory/",
-  "SendGridAPIKey": "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"
+  "TrolleyAPI": "http://localhost:17700/",
+  "InventoryAPI": "http://localhost:17600/",
+  "SendGridAPIKey": "{SendGridAPIKey}"
 }
