--- a/WineStoreWeb/appsettings.json
+++ b/WineStoreWeb/appsettings.json
@@ -5,9 +5,9 @@
       "Default": "Warning"
     }
   },
-  "PurchaseAPI": "http://winestoreapi/",
-  "InventoryAPI": "http://winestoreinventory/",
-  "TrolleyAPI": "http://winestoretrolley/",
+  "PurchaseAPI": "http://localhost:17500/",
+  "InventoryAPI": "http://localhost:17600/",
+  "TrolleyAPI": "http://localhost:17700/",
   "PurchaseAPIKey": "TOBEREPLACED",
   "InventoryAPIKey": "ALSOTOBEREPLACED",
   "TrolleyAPIKey": "ANOTHERONETOBEREPLACED"
